@@ -18,11 +18,5 @@
 
 void sp_maintoolbox_create (void);
 gint sp_maintoolbox_close (GtkWidget * widget, GdkEventAny * event, gpointer data);
-void sp_maintoolbox_drag_data_received (GtkWidget * widget,
-					GdkDragContext * drag_context,
-					gint x, gint y,
-					GtkSelectionData * data,
-					guint info,
-					guint event_time,
-					gpointer user_data);
+
 #endif
